<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:title="@string/search"
          android:orderInCategory="100"
          android:icon="@drawable/ic_search_w"
          android:imeOptions="actionSearch"
          android:inputType="textCapWords"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_hook_all"
          android:orderInCategory="101"
          android:title="@string/hook_all"
          android:icon="@drawable/ic_done_all"
          android:onClick="onMenuHookAll"
          app:showAsAction="never"/>

    <item android:id="@+id/action_hook_user"
          android:orderInCategory="102"
          android:title="@string/hook_user"
          android:icon="@drawable/ic_folder_shared"
          android:onClick="onMenuHookUser"
          app:showAsAction="never"/>
</menu>
