<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray5"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <include layout="@layout/include_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/show_system_app"
                android:textColor="@color/black0"
                android:textSize="16sp"/>

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sbShowSystemApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                app:kswBackDrawable="@drawable/ios_back_drawable"
                app:kswBackMeasureRatio="1.8"
                app:kswThumbDrawable="@drawable/ios_thumb_selector"
                app:kswThumbMarginBottom="-4dp"
                app:kswThumbMarginLeft="-2dp"
                app:kswThumbMarginRight="-2dp"
                app:kswThumbMarginTop="-0dp"
                app:kswThumbWidth="10dp"/>
        </LinearLayout>

        <com.lqr.optionitemview.OptionItemView
            android:id="@+id/oivCheckUpdate"
            style="@style/OptionItem"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_option_item"
            app:left_text="@string/check_update"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="15dp"
            app:left_text_size="16sp"/>

        <com.lqr.optionitemview.OptionItemView
            android:id="@+id/oivAbout"
            style="@style/OptionItem"
            android:background="@drawable/selector_option_item"
            app:left_text="@string/about"
            app:left_text_color="@color/black0"
            app:left_text_margin_left="15dp"
            app:left_text_size="16sp"/>

    </LinearLayout>
</ScrollView>
