<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cloud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sollyu.android.appenv.activity.CloudActivity"
    tools:showIn="@layout/activity_cloud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.BootstrapWell
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:bootstrapSize="xl">

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                app:bootstrapBrand="success"
                app:bootstrapText="Token:\ntimes:\nrange:"
                app:fontAwesomeIcon="fa_android"
                app:typicon="ty_anchor"
                />
        </com.beardedhen.androidbootstrap.BootstrapWell>

        <com.beardedhen.androidbootstrap.BootstrapWell
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            app:bootstrapSize="xl">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                >

                <TableRow>

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickUpload"
                        android:text="@string/upload"
                        app:bootstrapBrand="success"
                        app:bootstrapSize="lg"
                        app:buttonMode="regular"
                        app:roundedCorners="true"
                        app:showOutline="false"/>

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/bootstrap_button_default_corner_radius"
                        android:onClick="onClickDownload"
                        android:text="@string/download"
                        app:bootstrapBrand="success"
                        app:bootstrapSize="lg"
                        app:buttonMode="regular"
                        app:roundedCorners="true"
                        app:showOutline="false"/>
                </TableRow>
            </TableLayout>

        </com.beardedhen.androidbootstrap.BootstrapWell>

        <com.beardedhen.androidbootstrap.BootstrapWell
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:bootstrapSize="xl">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickPhone"
                android:text="@string/get_last_phone_list"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false"
                />
        </com.beardedhen.androidbootstrap.BootstrapWell>

        <com.beardedhen.androidbootstrap.BootstrapWell
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:bootstrapSize="xl">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickShare"
                android:text="@string/share_devices"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false"
                />
        </com.beardedhen.androidbootstrap.BootstrapWell>

    </LinearLayout>
</ScrollView>
